# ai-site-builder

./: .env.example  .gitignore  .~lock.codici site.odt#  ANALISI_FREEMIUM.md  ARCHITECTURE.md  CLAUDE.md  DEPLOY_ANTIGRAVITY_FIX.md  DEPLOY_CHECKLIST.md  DEPLOY_GUIDE.md  DEPLOY_VERCEL.md  HANDOFF_ANTIGRAVITY.md  LANDING_PAGE.md  MISSIONE_ANTIGRAVITY.md  OPENROUTER_SETUP.md  PLANNING.md  PLANNING_v2.md  Procfile  README.md  TEST_OAUTH.md  codici site.odt  deploy-render.sh  docker-compose.yml  mcp.json  render.yaml  requirements.txt  start.bat  vercel.json
backend/: .env.example  .render-build.sh  build.sh  fix_db_schema.py  pyproject.toml  render.yaml  requirements.txt  start.sh  test_ai.py  test_e2e_restaurant.py  test_kimi_direct.py  test_kimi_service.py  test_openrouter_simple.py  test_quick.py  test_system.py
backend/ads_data/: knowledge-articles.json  templates-verticali.json
backend/app/: __init__.py  main.py
backend/app/components/: components.json  gsap-universal.js
backend/app/config/: design_tokens.py  section_schemas.py  stock_photos.py  style_maps.py  variety_pools.py
backend/app/core/: config.py  database.py  rate_limiter.py  security.py
backend/app/data/: ads_benchmarks.json  (+2 more)
backend/n8n/: deploy-workflow.js
backend/tests/: test_e2e_pipeline.py  test_jinja_assembler.py  test_main.py  test_payments.py  test_photo_choice_api.py  test_photo_choice_apply.py  test_photo_choice_e2e.py  test_photo_choice_scan.py  test_photo_pipeline.py  test_quality_pipeline.py
backend/tools/: STITCH_PROMPTS.md  batch_converter.py  stitch_converter.py
(+926 files in other folders)
